force-app/main/default/objects/acideasULT__brIdea__c/acideasULT__brIdea__c.object-meta.xml
<CustomObject>
    <description>Main object used for creating ideas in AC Ultimate Ideas</description>
    <label>AC Idea</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>