force-app/main/default/objects/acideasULT__brIdea__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added for GTMS-14256</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feature Requests</relationshipLabel>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>