force-app/main/default/objects/acideasULT__brIdea__c/fields/acideasULT__brIdea__c.field-meta.xml
<CustomField>
    <fullName>acideasULT__brIdea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AC Idea</label>
    <referenceTo>acideasULT__brIdea__c</referenceTo>
    <relationshipLabel>AC Ideas</relationshipLabel>
    <relationshipName>brIdeas</relationshipName>
    <type>Lookup</type>
</CustomField>