force-app/main/default/objects/acideasULT__brIdea__c/fields/acideasULT__brZone__c.field-meta.xml
<CustomField>
    <fullName>acideasULT__brZone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AC Zone</label>
    <referenceTo>acideasULT__brZone__c</referenceTo>
    <relationshipLabel>AC Ideas</relationshipLabel>
    <relationshipName>brIdeas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>