force-app/main/default/objects/acideasULT__brIdea__c/fields/acideasULT__Jira_Issue__c.field-meta.xml
<CustomField>
    <fullName>acideasULT__Jira_Issue__c</fullName>
    <label>Jira Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>