force-app/main/default/objects/acideasULT__brIdea__c/fields/acideasULT__VoteScore__c.field-meta.xml
<CustomField>
    <fullName>acideasULT__VoteScore__c</fullName>
    <label>Vote Score</label>
    <summarizedField>acideasULT__brIdeaVote__c.acideasULT__Score__c</summarizedField>
    <summaryForeignKey>acideasULT__brIdeaVote__c.acideasULT__brIdea__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>