force-app/main/default/objects/acideasULT__brIdea__c/fields/Escalated_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Escalated_By_Name__c</fullName>
    <formula>Last_Escalated_By__r.LastName &amp; &quot;, &quot; &amp; Last_Escalated_By__r.FirstName</formula>
    <label>Escalated By Name</label>
    <type>Text</type>
</CustomField>