force-app/main/default/objects/acideasULT__brIdea__c/fields/Estimated_GA_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_GA_Date__c</fullName>
    <inlineHelpText>The estimated launch date for this FR in the regions marked for the stage marked. Only available for FRs with Status = On Roadmap, Partial Release, or Delivered.</inlineHelpText>
    <label>Estimated Launch Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring &apos;24 (Q1FY25)</fullName>
            </value>
            <value>
                <fullName>Summer &apos;24 (Q2FY25)</fullName>
            </value>
            <value>
                <fullName>Fall &apos;24 (Q3FY25)</fullName>
            </value>
            <value>
                <fullName>Winter &apos;24 (Q4FY25)</fullName>
            </value>
            <value>
                <fullName>Spring &apos;25 (Q1FY26)</fullName>
            </value>
            <value>
                <fullName>Summer &apos;25 (Q2FY26)</fullName>
            </value>
            <value>
                <fullName>Fall &apos;25 (Q3FY26)</fullName>
            </value>
            <value>
                <fullName>Winter &apos;25 (Q4FY26)</fullName>
            </value>
            <value>
                <fullName>Spring &apos;26 (Q1FY27)</fullName>
            </value>
            <value>
                <fullName>Summer &apos;26 (Q2FY27)</fullName>
            </value>
            <value>
                <fullName>Fall &apos;26 (Q3FY27)</fullName>
            </value>
            <value>
                <fullName>Winter &apos;26 (Q4FY27)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>