force-app/main/default/objects/acideasULT__brIdea__c/fields/Last_Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Escalated_Date__c</fullName>
    <label>Escalated Date</label>
    <type>DateTime</type>
</CustomField>