force-app/main/default/objects/acideasULT__brIdea__c/fields/Last_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Resolution_Date__c</fullName>
    <label>Resolution Date</label>
    <type>DateTime</type>
</CustomField>