force-app/main/default/objects/acideasULT__brIdea__c/fields/PM_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>PM_Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Samsara - Product Management</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Samsara - Growth Profile</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Samsara - Product Management plus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>