force-app/main/default/objects/acideasULT__brIdea__c/fields/Post_to_Customers__c.field-meta.xml
<CustomField>
    <fullName>Post_to_Customers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post to Customers</label>
    <type>Checkbox</type>
</CustomField>