force-app/main/default/objects/acideasULT__brIdea__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>This is the product development stage: Open Beta, Closed Beta, EA, GA. Only available for FRs with Status = On Roadmap, Partial Release, or Delivered</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Beta</fullName>
            </value>
            <value>
                <fullName>Closed Beta</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>