force-app/main/default/objects/acideasULT__brIdea__c/fields/What_data_type_does_this_pertain_to__c.field-meta.xml
<CustomField>
    <fullName>What_data_type_does_this_pertain_to__c</fullName>
    <inlineHelpText>The data entity that is available in samsara (e.g. vehicles, safety events)</inlineHelpText>
    <label>What data type does this pertain to?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alert Contacts</fullName>
            </value>
            <value>
                <fullName>Alert Definitions</fullName>
            </value>
            <value>
                <fullName>Alert Incidents</fullName>
            </value>
            <value>
                <fullName>API Tokens</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Asset-Asset Assignments</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Attributes</fullName>
            </value>
            <value>
                <fullName>Aux Inputs</fullName>
            </value>
            <value>
                <fullName>Battery Diagnostics</fullName>
            </value>
            <value>
                <fullName>CA Hours of Service</fullName>
            </value>
            <value>
                <fullName>CA Hours of Service Clocks</fullName>
            </value>
            <value>
                <fullName>CA Hours of Service Violations</fullName>
            </value>
            <value>
                <fullName>Cargo Statuses</fullName>
            </value>
            <value>
                <fullName>Coachable Items</fullName>
            </value>
            <value>
                <fullName>Coaching Behaviors</fullName>
            </value>
            <value>
                <fullName>Coaching Sessions</fullName>
            </value>
            <value>
                <fullName>Custom Report Definitions</fullName>
            </value>
            <value>
                <fullName>Custom Reports</fullName>
            </value>
            <value>
                <fullName>DEF Levels</fullName>
            </value>
            <value>
                <fullName>Defect Types</fullName>
            </value>
            <value>
                <fullName>Defects</fullName>
            </value>
            <value>
                <fullName>Devices</fullName>
            </value>
            <value>
                <fullName>Document Templates</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Door Statuses</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Driver App Workflow Definitions</fullName>
            </value>
            <value>
                <fullName>Driver App Workflows</fullName>
            </value>
            <value>
                <fullName>Driver-Asset Assignments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>