force-app/main/default/objects/acideasULT__brIdea__c/recordTypes/Customer_Feature_Request.recordType-meta.xml
<RecordType>
    <fullName>Customer_Feature_Request</fullName>
    <active>true</active>
    <label>Customer Feature Request</label>
</RecordType>