force-app/main/default/objects/acideasULT__brIdea__c/recordTypes/Internal_Feature_Request.recordType-meta.xml
<RecordType>
    <fullName>Internal_Feature_Request</fullName>
    <active>true</active>
    <label>Internal Feature Request</label>
</RecordType>