force-app/main/default/objects/acideasULT__brIdea__c/recordTypes/Merged_Feature_Request.recordType-meta.xml
<RecordType>
    <fullName>Merged_Feature_Request</fullName>
    <active>true</active>
    <label>Merged Feature Request</label>
</RecordType>