force-app/main/default/objects/acideasULT__brIdea__c/validationRules/acideasULT__Disable_edit_in_Merged_Ideas.validationRule-meta.xml
<ValidationRule>
    <fullName>acideasULT__Disable_edit_in_Merged_Ideas</fullName>
    <active>false</active>
    <errorConditionFormula>acideasULT__brIdea__c &lt;&gt; null</errorConditionFormula>
    <errorMessage>You can not edit merged idea</errorMessage>
</ValidationRule>