force-app/main/default/objects/acideasULT__brIdea__c/validationRules/acideasULT__Required_fields_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>acideasULT__Required_fields_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(acideasULT__Description__c) || ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Some required fields are empty (Name, Description, Categories)</errorMessage>
</ValidationRule>