force-app/main/default/objects/acideasULT__brIdea__c/validationRules/PM_Owner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PM_Owner_Required</fullName>
    <active>true</active>
    <description>GTMS-24018</description>
    <errorConditionFormula>ISBLANK( PM_Owner_Id__c )</errorConditionFormula>
    <errorMessage>Ensure PM Owner is populated at submission, please verify Category/Sub-Category Owner setup</errorMessage>
</ValidationRule>