force-app/main/default/objects/acideasULT__brIdea__c/listViews/acideasULT__All.listView-meta.xml
<ListView>
    <fullName>acideasULT__All</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>acideasULT__Description__c</columns>
    <columns>Product_Area__c</columns>
    <columns>Status__c</columns>
    <columns>Total_ARR__c</columns>
    <columns>Total_ACV__c</columns>
    <columns>Escalated__c</columns>
    <columns>PM_Owner_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>