force-app/main/default/objects/acideasULT__brIdea__c/listViews/Connected_Maintenance_FRs.listView-meta.xml
<ListView>
    <fullName>Connected_Maintenance_FRs</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>acideasULT__Description__c</columns>
    <columns>Product_Area__c</columns>
    <columns>Status__c</columns>
    <columns>Total_ARR__c</columns>
    <columns>Total_ACV__c</columns>
    <columns>Escalated__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Area__c</field>
        <operation>equals</operation>
        <value>Maintenance / Predictive Maintenance</value>
    </filters>
    <label>Connected Maintenance FRs</label>
</ListView>