force-app/main/default/objects/acideasULT__brIdea__c/listViews/Connected_Trainings_FRs_View.listView-meta.xml
<ListView>
    <fullName>Connected_Trainings_FRs_View</fullName>
    <columns>NAME</columns>
    <columns>Total_ACV__c</columns>
    <columns>Total_ARR__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>PM_Owner_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Area__c</field>
        <operation>equals</operation>
        <value>Training</value>
    </filters>
    <label>Connected Trainings FRs View</label>
</ListView>