force-app/main/default/objects/acideasULT__brIdea__c/listViews/On_Roadmap.listView-meta.xml
<ListView>
    <fullName>On_Roadmap</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>acideasULT__Description__c</columns>
    <columns>Product_Area__c</columns>
    <columns>Status__c</columns>
    <columns>Total_ARR__c</columns>
    <columns>Total_ACV__c</columns>
    <columns>Escalated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>On Roadmap</value>
    </filters>
    <label>On Roadmap</label>
</ListView>