force-app/main/default/objects/acideasULT__brIdea__c/listViews/Routing_Dispatch_FRs.listView-meta.xml
<ListView>
    <fullName>Routing_Dispatch_FRs</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>acideasULT__Description__c</columns>
    <columns>Product_Area__c</columns>
    <columns>Status__c</columns>
    <columns>Total_ARR__c</columns>
    <columns>Total_ACV__c</columns>
    <columns>Escalated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Area__c</field>
        <operation>equals</operation>
        <value>Routing &amp; Dispatch</value>
    </filters>
    <label>Routing &amp; Dispatch FRs</label>
</ListView>