force-app/main/default/objects/acideasULT__brIdea__c/listViews/Worker_Safety_FRs_View.listView-meta.xml
<ListView>
    <fullName>Worker_Safety_FRs_View</fullName>
    <columns>NAME</columns>
    <columns>acideasULT__Description__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Product_Area__c</columns>
    <columns>PM_Owner_Id__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Area__c</field>
        <operation>equals</operation>
        <value>Lone Worker</value>
    </filters>
    <label>Worker Safety FRs View</label>
</ListView>